[gd_scene load_steps=4 format=3 uid="uid://o3spoodyou3t"]

[ext_resource type="Script" path="res://scenes/Projectiles/DivineSword/DivineSword.gd" id="1_fhy0p"]
[ext_resource type="Texture2D" uid="uid://coy2whf12kbfh" path="res://sprites/abilities/DivineSword.png" id="1_t10nj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_my0i6"]
radius = 5.0
height = 22.0

[node name="DivineSwored" type="Area2D"]
script = ExtResource("1_fhy0p")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_t10nj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_my0i6")

[node name="SwingTimer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SwingTimer" to="." method="_on_swing_timer_timeout"]
